--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
+button {
+    color: inherit;
+}
 ul {
     list-style: none;
 }
@@ -111,16 +114,10 @@ body {
     border-radius: 30px;
     margin-left: 30px;
 }
-.logo {
-}
-.logo__img {}
-.menu {
-}
 .menu__list {
     display: flex;
     gap: 25px;
 }
-.menu__item {}
 .menu__item-link {
     transition: color .3s ease;
 }
@@ -181,9 +178,6 @@ body {
 .hero__actions {
     margin-bottom: 24px;
 }
-.hero__btn {
-    
-}
 .hero__cta {
     margin-left: 0;
 }
@@ -220,8 +214,6 @@ body {
 }
 
 
-.features {
-}
 .features__inner {
     margin-bottom: 90px;
 }
@@ -274,7 +266,6 @@ body {
     max-width: 585px;
     width: 100%;
 }
-.role__content {}
 .role__title {
     margin-bottom: 25px;
     max-width: 447px;
@@ -414,7 +405,6 @@ body {
     display: flex;
     justify-content: space-around;
 }
-.footer__brand {}
 .footer__main-title {
     font-family: 'Montserrat-Bold', sans-serif;
     font-weight: 700;
@@ -424,14 +414,12 @@ body {
     font-family: 'Montserrat-Medium', sans-serif;
     font-weight: 500;
 }
-.footer__main-item {}
 .footer__main-list {
     display: flex;
     flex-direction: column;
     gap: 20px;
     font-size: 13px;
 }
-.footer__main-list-item {}
 .footer__copyright {
     text-align: center;
     line-height: 1.28;
@@ -467,7 +455,6 @@ body {
 .reviews__slider {
     max-width: 707px;
 }
-.reviews__slide {}
 .reviews__slide-user {
     border-radius: 100px;
     width: 50px;
@@ -492,15 +479,10 @@ body {
     line-height: 1.36;
 }
 
-.swiper {
-}
 .swiper-wrapper {
     margin-bottom: 53px;
 }
-.swiper-slide {
-}
-.swiper-pagination {
-}
+
 .swiper-pagination-bullet {
     background-color: #888888;
     height: 2px;
